bdr.BDR.scala.error
Erreur de compilation :
BDR:12: error: '(' expected but '{' found.
  else if {x= true}} 
          ^BDR:12: error: illegal start of simple expression
  else if {x= true}} 
                   ^